# PikaChat

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md
apps/backend-smoke/: Cargo.toml
apps/backend-smoke/src/: main.rs
apps/desktop-shell/: Cargo.toml  build.rs
apps/desktop-shell/src/: main.rs
apps/desktop-shell/ui/: main.slint
apps/pikachat-desktop/: Cargo.toml
apps/pikachat-desktop/src/: auth_profile.rs  bridge.rs  config.rs  gif_player.rs  logging.rs  main.rs  media_cache.rs  state.rs
apps/pikachat-desktop/ui/: main.slint
crates/backend-core/: Cargo.toml
crates/backend-core/src/: channel.rs  error.rs  lib.rs  normalization.rs  retry.rs  state_machine.rs  timeline.rs  types.rs
crates/backend-matrix/: Cargo.toml
crates/backend-matrix/src/: lib.rs
crates/backend-platform/: Cargo.toml
crates/backend-platform/src/: lib.rs
