[workspace]
members = [
    "crates/backend-core",
    "crates/backend-platform",
    "crates/backend-matrix",
    "apps/backend-smoke",
    "apps/desktop-shell",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
tracing = "0.1.41"
url = { version = "2.5.7", features = ["serde"] }
matrix-sdk = { version = "0.16.0", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
matrix-sdk-ui = { version = "0.16.0", default-features = false, features = ["rustls-tls"] }
matrix-sdk-sqlite = "0.16.0"
