[package]
name = "desktop-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
slint = { version = "1.15.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "backend-winit-wayland", "backend-winit-x11", "renderer-femtovg"] }

[build-dependencies]
slint-build = "1.15.1"
