[package]
name = "pikachat-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
backend-core = { path = "../../crates/backend-core" }
backend-matrix = { path = "../../crates/backend-matrix" }
slint = { version = "1.15.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "backend-winit-wayland", "backend-winit-x11", "renderer-femtovg"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
slint-build = "1.15.1"
