[package]
name = "pikachat-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
arboard = "3.6.1"
backend-core = { path = "../../crates/backend-core" }
backend-matrix = { path = "../../crates/backend-matrix" }
rfd = "0.15.4"
serde.workspace = true
serde_json.workspace = true
slint = { version = "1.15.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "backend-winit-wayland", "backend-winit-x11", "renderer-femtovg", "image-default-formats"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[build-dependencies]
slint-build = "1.15.1"
